# Assignment

./: .gitignore  CMakeLists.txt  README.md  configure.bat  main.cpp
lib/: CMakeLists.txt  Vectors.cpp  Vectors.h
